[gd_scene load_steps=12 format=3 uid="uid://825auspdolux"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_ukcxh"]
[ext_resource type="PackedScene" uid="uid://cl74crm2ckvlc" path="res://prefabs/creatures/WeeWiggler.tscn" id="2_kocso"]
[ext_resource type="StyleBox" uid="uid://cb8acbvyiimdt" path="res://misc/button_stylebox.tres" id="5_4mrom"]
[ext_resource type="Script" path="res://scripts/HelpLabel.gd" id="5_55550"]
[ext_resource type="Texture2D" uid="uid://bwgxu8qysmamp" path="res://sprites/info.png" id="5_p8etf"]
[ext_resource type="Script" path="res://scripts/background.gd" id="6_r6824"]
[ext_resource type="Script" path="res://scripts/CreatureEmitter.gd" id="8_efa28"]

[sub_resource type="Animation" id="Animation_fpk0c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnlockLabelContainer/UnlockedLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(173, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnlockLabelContainer/UnlockedLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0giqb"]
resource_name = "Unlocked"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnlockLabelContainer/UnlockedLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.6, 0.8, 1, 2.2, 2.4, 2.6, 2.8, 3, 4, 4.2, 4.4, 4.6, 4.8, 6, 6.2, 6.4, 6.6, 6.8, 8, 8.2, 8.4, 8.6, 8.8, 10, 10.2, 10.4, 10.6, 10.8, 12, 12.2, 12.4, 12.6, 12.8),
"transitions": PackedFloat32Array(2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2),
"update": 0,
"values": [Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6), Vector2(165, 6), Vector2(173, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnlockLabelContainer/UnlockedLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 14, 14.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p204v"]
_data = {
"RESET": SubResource("Animation_fpk0c"),
"Unlocked": SubResource("Animation_0giqb")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ybjt"]

[node name="GameManager" type="Node2D"]
process_mode = 1
script = ExtResource("1_ukcxh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1056.0
offset_bottom = 829.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
color = Color(0, 0, 0, 1)
script = ExtResource("6_r6824")

[node name="DragGraceTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WigglerSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DeadCreatureEmitter" type="Node" parent="."]
script = ExtResource("8_efa28")
creature_prefab = ExtResource("2_kocso")

[node name="HelpLabel" type="Label" parent="."]
process_mode = 3
offset_left = 28.0
offset_top = 156.0
offset_right = 494.0
offset_bottom = 309.0
text = "Nibblers

Left click to spawn and drag creatures.
Mouse scroll or tab to switch selected creature (see top left).
Space to spawn in random location.
I or hover over top left for info.
ESC to exit.

P to start (and pause)"
script = ExtResource("5_55550")

[node name="TargetCreatureLabel" type="Label" parent="."]
offset_left = 127.0
offset_top = 109.0
offset_right = 266.0
offset_bottom = 132.0
text = "Large WeeWiggler"

[node name="UnlockLabelContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 179.0
offset_top = 6.0
offset_right = 179.0
offset_bottom = 6.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="UnlockLabelContainer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_p204v")
}

[node name="UnlockedLabel" type="Label" parent="UnlockLabelContainer"]
modulate = Color(1, 1, 1, 0)
offset_left = 173.0
offset_top = 6.0
offset_right = 265.0
offset_bottom = 29.0
mouse_filter = 1
text = "WeeWiggler"

[node name="SelectedCreatureLabel" type="Button" parent="."]
z_index = 1
custom_minimum_size = Vector2(0, 16)
offset_left = 11.0
offset_top = 6.0
offset_right = 341.0
offset_bottom = 39.0
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 5
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ybjt")
theme_override_styles/hover = ExtResource("5_4mrom")
theme_override_styles/pressed = ExtResource("5_4mrom")
theme_override_styles/normal = ExtResource("5_4mrom")
button_mask = 0
text = "WeeWiggler"
icon = ExtResource("5_p8etf")
alignment = 0
expand_icon = true

[node name="TooltipLabel" type="Label" parent="."]
z_index = 1
offset_left = 11.0
offset_top = 51.0
offset_right = 51.0
offset_bottom = 84.0
theme_override_styles/normal = ExtResource("5_4mrom")
